--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </p>
         </section>
         <a href="https://www.instagram.com/hoaschoaf_" target="_blank" rel="noopener noreferrer">
-            <img src="instagramicon.png" alt="Instagram" style="width: 100px; height: 100px;">
+            <img src="Instagramicon.png" alt="Instagram" style="width: 100px; height: 100px;">
         </a>
     </main>
     <footer>
