--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Wir sind HoaSchoaf eine Brassband aus Salzburg!"
+      content="Wir sind HoaSchoaf, eine Brassband aus Salzburg!"
     />
-    <meta name="keywords" content="Hoaschoaf, BrassBand Salzburg" />
+    <meta name="keywords" content="Hoaschoaf, Brassband, Salzburg, Musik" />
     <meta name="author" content="Lukas Stockinger" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HoaSchoaf - BrassBand aus Salzburg</title>
+    <title>HoaSchoaf – Brassband aus Salzburg</title>
+
     <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,6 +19,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body class="body">
     <div class="menu-mobile">
       <ul class="menu-list-mobile">
@@ -30,75 +32,120 @@
       </div>
     </div>
 
-    <main>
-      <div class="heroSection">
-        <!-- navbar -->
-        <nav class="navigation">
-          <img
-            class="logo"
-            src="assets/HoaSchoaf_Logo.png"
-            alt="Logo HoaSchoaf"
-          />
-          <ul class="menu">
-            <li><a href="anker1">Über Uns</a></li>
-            <li><a href="anker">Kontakt</a></li>
-          </ul>
-          <div class="hamburger-icon">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-          </div>
-        </nav>
-        <nav class="heroTextContainer">
-          <h1 class="heroText">Wir sind HoaSchoaf!</h1>
-        </nav>
+    <header class="heroSection">
+      <nav class="navigation">
+        <img
+          class="logo"
+          src="assets/HoaSchoaf_Logo.png"
+          alt="Logo der Brassband HoaSchoaf"
+        />
+        <ul class="menu">
+          <li><a href="#anker1">Über Uns</a></li>
+          <li><a href="#anker3">Kontakt</a></li>
+        </ul>
+        <div class="hamburger-icon">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+      </nav>
+      <div class="heroTextContainer">
+        <h1 class="heroText">Wir sind HoaSchoaf!</h1>
       </div>
+    </header>
 
-      <div class="section2">
+    <main>
+      <section class="about-us">
         <div class="inhalt">
           <div class="left">
             <div class="cont">
-              <h2 id="anker1">Jedes Event - ein besonderes Erlebnis</h2>
+              <h2 id="anker1">Jedes Event – ein besonderes Erlebnis</h2>
               <p>
                 Wir sind eine Brassband aus Salzburg mit 10 leidenschaftlichen
-                Musikerinnen und Musikern. Unser breitgefächertes Reportoire
-                reicht von mitreißenden Brass-Sounds über Tanzmusik bis zu zu
+                Musikerinnen und Musikern. Unser breitgefächertes Repertoire
+                reicht von mitreißenden Brass-Sounds über Tanzmusik bis zu
                 Partyhits. Ob Bälle, Zeltfeste, Firmenfeiern oder andere
-                besondere Anlässe:wir sorgen für die passende Musik und
+                besondere Anlässe: Wir sorgen für die passende Musik und
                 garantieren beste Stimmung!
               </p>
             </div>
             <div class="cont">
               <h2>Energie, Spaß und echte Leidenschaft</h2>
               <p>
-                Das ist unser Motto und so garantieren wir, dass deine
-                Veranstaltung in Erinnerung bleibt.
+                Das ist unser Motto – so bleibt deine Veranstaltung garantiert
+                in Erinnerung.
               </p>
             </div>
             <div class="cont">
-              <h2 id="anker3">Du möchtest uns auf deinem nächsten Event?</h2>
+              <h2 id="anker3">Du möchtest uns für dein Event buchen?</h2>
               <p>
-                Schreibe uns über hoaschoaf@gmail.com oder auf unserem
-                Instagram!
+                Schreib uns einfach an
+                <a href="mailto:hoaschoaf@gmail.com">hoaschoaf@gmail.com</a>
+                oder über unseren Instagram-Kanal!
               </p>
             </div>
           </div>
           <div class="right">
-            <img class="picture" src="assets/section2Image.png" alt="" />
+            <img
+              class="picture"
+              src="assets/section2Image.png"
+              alt="Bandfoto von HoaSchoaf"
+            />
           </div>
         </div>
-      </div>
+      </section>
 
-      <!-- Elfsight Instagram Feed | Untitled Instagram Feed -->
-      <script
-        src="https://static.elfsight.com/platform/platform.js"
-        async
-      ></script>
-      <div
-        class="elfsight-app-aa2246e7-a805-4d2e-ba13-58395a2ee8bc"
-        data-elfsight-app-lazy
-      ></div>
+      <section class="events">
+        <table>
+          <thead>
+            <tr>
+              <th>Datum</th>
+              <th>Veranstaltung</th>
+              <th>Ort</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>31.08.2025</td>
+              <td>Dorffest Adnet</td>
+              <td>Adnet</td>
+            </tr>
+            <tr>
+              <td>27.09.2025</td>
+              <td>Herbstfest Adnet</td>
+              <td>Adnet</td>
+            </tr>
+            <tr>
+              <td>11.10.2025</td>
+              <td>Maturaball der HLWM Annahof</td>
+              <td>Lehrbauhof Salzburg</td>
+            </tr>
+            <tr>
+              <td>18.10.2025</td>
+              <td>Maturaball der BAfEP Salzburg</td>
+              <td>Stadthalle Oberndorf</td>
+            </tr>
+            <tr>
+              <td>05.12.2025</td>
+              <td>Maturaball der Modeschule Hallein</td>
+              <td>Zentrum für Visionen Puch</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <section>
+        <div
+          class="elfsight-app-aa2246e7-a805-4d2e-ba13-58395a2ee8bc"
+          data-elfsight-app-lazy
+        ></div>
+        <script
+          src="https://static.elfsight.com/platform/platform.js"
+          async
+        ></script>
+      </section>
     </main>
+
     <script src="index.js"></script>
   </body>
 </html>
