--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
               <h2 id="anker3">Du möchtest uns für dein Event buchen?</h2>
               <p>
                 Schreib uns einfach an
-                <a href="mailto:hoaschoaf@gmail.com">hoaschoaf@gmail.com</a>
-                oder über unseren Instagram-Kanal!
+                <a href="mailto:hoaschoafmusic@gmail.com">hoaschoafmusic@gmail.com</a>
+                über unseren Instagram-Kanal oder telefonisch: +43 660 6068282
               </p>
             </div>
           </div>
