"Header und Herosection fix - consisten widths with rest of page"

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <title>Hoaschoaf - Brassband Salzburg</title>
     <meta name="description" content="Die offizielle Website der Brassband Hoaschoaf" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="color-scheme" content="dark" />
+    <meta name="supported-color-schemes" content="dark" />
+    <meta name="theme-color" content="#0b0b0b" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&family=Poppins:wght@400;900&display=swap" rel="stylesheet" />
