--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 
     <script>
       if (/SamsungBrowser/i.test(navigator.userAgent)) {
-        document.querySelectorAll('.emphasis').forEach((el) => {
-          el.style.color = '#e50000';
-          el.style.webkitTextFillColor = '#e50000';
-        });
+        document.documentElement.classList.add('sb');
       }
     </script>
 
