"Sync Member Popup Window Implemantionen Progress with other devices"

--- a/index.html
+++ b/index.html
@@ -131,6 +131,16 @@
         </a>
       </div>
     </section>
+    <div class="band-members-popup">
+      <svg>
+        <use href="src/img/Icons/icons.svg#close" />
+      </svg>
+      <div class="band-member-popup-image"></div>
+      <div class="band-members-popup-title">
+        <p class="band-member-name">Thomas</p>
+        <p class="band-member-short-description">Spaßvogel mit Ehrlichkeitsgarantie</p>
+      </div>
+    </div>
 
     <!-- ÜBER UNS SEKTION -->
     <section class="about-us">
