little change in title to see if deployment is working

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </header>
       <h1 class="hero-title">
         <span class="centered-text"><span class="left">Wir</span><span class="right">sind</span></span>
-        <span class="bottom-text emphasis"><span class="bottom-text-content">Hoaschoaf</span></span>
+        <span class="bottom-text emphasis"><span class="bottom-text-content">Hoaschoaf TEST</span></span>
       </h1>
     </section>
 
