--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Hoaschoaf - Brassband Salzburg</title>
+    <title>Hoaschoaf - Band Salzburg</title>
     <meta name="description" content="Die offizielle Website der Brassband Hoaschoaf" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="color-scheme" content="dark" />
@@ -57,29 +57,33 @@
       <div class="events-title">
         <h2>
           <span class="top">Anstehende</span>
-          <span class="bottom emphasis">Events / 25</span>
+          <span class="bottom emphasis">Events / 26</span>
         </h2>
       </div>
       <table class="event-table">
         <tr class="event-info">
-          <td class="day-info"><span class="weekday emphasis">Freitag</span><span class="date">31. August</span></td>
-          <td class="location">Dorffest Adnet in 5412 Adnet</td>
+          <td class="day-info"><span class="weekday emphasis">Samstag</span><span class="date">24. Jänner</span></td>
+          <td class="location">Maturaball Holztechnikum Kuchl in der Alten Saline Hallein</td>
         </tr>
         <tr class="event-info">
-          <td class="day-info"><span class="weekday emphasis">Samstag</span><span class="date">27. September</span></td>
-          <td class="location">Herbstfest Adnet in 5412 Adnet</td>
+          <td class="day-info"><span class="weekday emphasis">Samstag</span><span class="date">13. Juni</span></td>
+          <td class="location">Privat</td>
         </tr>
         <tr class="event-info">
-          <td class="day-info"><span class="weekday emphasis">Samstag</span><span class="date">11. Oktober</span></td>
-          <td class="location">Maturaball der HLWM Annahof beim Lehrbauhof Salzburg</td>
+          <td class="day-info"><span class="weekday emphasis">Donnerstag</span><span class="date">30. April</span></td>
+          <td class="location">Maturaball der HAK Hallein im Ziegelstadel Hallein</td>
         </tr>
         <tr class="event-info">
-          <td class="day-info"><span class="weekday emphasis">Samstag</span><span class="date">18. Oktober</span></td>
-          <td class="location">Maturaball der BAfEP Salzburg bei der Stadthalle Oberndorf</td>
+          <td class="day-info"><span class="weekday emphasis">Samstag</span><span class="date">20. Juni</span></td>
+          <td class="location">Feuerwehrfest in Bruck an der Glocknerstraße</td>
         </tr>
         <tr class="event-info">
-          <td class="day-info"><span class="weekday emphasis">Freitag</span><span class="date">5. Dezember</span></td>
-          <td class="location">Maturaball der Modeschule Hallein bei dem Zentrum für Visionen Puch</td>
+          <td class="day-info"><span class="weekday emphasis">Samstag</span><span class="date">27. Juni</span></td>
+          <td class="location">Privat</td>
+        </tr>
+        <tr class="event-info">
+          <td class="day-info"><span class="weekday emphasis">Samstag</span><span class="date">26. September</span></td>
+          <td class="location">Privat</td>
         </tr>
       </table>
     </section>
