--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <span class="sr-only">Über Uns</span>
       </h2>
       <p class="about-us-text-1">
-        Wir sind eine <span class="emphasis">Brassband aus Salzburg</span> mit 10 leidenschaftlichen Musikerinnen und Musikern. Unser breitgefächertes
+        Wir sind eine <span class="emphasis">Band aus Salzburg</span> mit 10 leidenschaftlichen Musikerinnen und Musikern. Unser breitgefächertes
         Repertoire reicht von mitreißenden <span class="emphasis">Brass-Sounds</span> über <span class="emphasis">Tanzmusik</span> bis zu
         <span class="emphasis">Partyhits</span>.
       </p>
@@ -191,9 +191,6 @@
         <div class="grid-col grid-col--2"></div>
         <div class="grid-col grid-col--3"></div>
         <div class="grid-col grid-col--4"></div>
-      </div>
-      <div class="button-container">
-        <a href="maintainence.html"><button>Mehr Fotos</button></a>
       </div>
     </section>
 
